# game-dev-course

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile.txt  README.md
.github/workflows/: ccpp.yml
01-hello/: CMakeLists.txt
01-hello/libs/: CMakeLists.txt
01-hello/libs/include/: hello.h
01-hello/libs/src/: hello.cxx
01_hello/: CMakeLists.txt
01_hello/01_hello_dynamic/: CMakeLists.txt
01_hello/01_hello_dynamic/libs/: CMakeLists.txt
01_hello/01_hello_dynamic/libs/headers/: hello.h
01_hello/01_hello_dynamic/source/: CMakeLists.txt  main.cxx
01_hello/01_hello_static/: .travis.yml  CMakeLists.txt
01_hello/01_hello_static/libs/: CMakeLists.txt
01_hello/01_hello_static/libs/source/: hello.cxx
01_hello/01_hello_static/source/: CMakeLists.txt
01_hello/build-01_hello_dynamic-Desktop-Debug/: 01_hello_dynamic.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
01_hello/build-01_hello_dynamic-Desktop-Debug/libs/: Makefile  cmake_install.cmake  hello_lib.cbp
01_hello/build-01_hello_dynamic-Desktop-Debug/source/: 01_hello_dynamic  Makefile  cmake_install.cmake
01_hello/build-01_hello_static-Desktop-Debug/: 01_hello_static.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
01_hello/build-01_hello_static-Desktop-Debug/libs/: Makefile  cmake_install.cmake  hello_lib.cbp
01_hello/build-01_hello_static-Desktop-Debug/source/: 01_hello_static  Makefile  cmake_install.cmake
01_hello/libs/: CMakeLists.txt
01_hello/source/: CMakeLists.txt
02-sdl/: CMakeLists.txt
02-sdl/02-sdl-shared/: CMakeLists.txt
02-sdl/02-sdl-static/: CMakeLists.txt
03-game-loop/: CMakeLists.txt
03-game-loop/engine/: CMakeLists.txt
03-game-loop/engine/include/: engine.hxx
03-game-loop/engine/src/: engine.cxx
03-game-loop/src/: CMakeLists.txt  game.cxx
04_0_soft_render/: CMakeLists.txt
04_0_soft_render/src/: CMakeLists.txt  canvas.hxx  render.cxx  render.hxx
04_opengl/: 1_shader.fs  1_shader.vs  CMakeLists.txt  default_shader.fs  default_shader.vs  vertexes.txt
04_opengl (copy)/: 1_shader.vs  default_shader_.fsh
04_opengl (copy)/engine/: CMakeLists.txt
04_opengl (copy)/engine/include/: engine.hxx
04_opengl (copy)/engine/src/: engine.cxx
04_opengl (copy)/src/: CMakeLists.txt  game.cxx
04_opengl/engine/: CMakeLists.txt
04_opengl/engine/include/: engine.hxx  om_gl_check.hxx  shader.hxx
04_opengl/engine/src/: engine.cxx  shader.cxx
04_opengl/src/: game.cxx
04_soft_render/: CMakeLists.txt  canvas.h  lol.ppm  main.cxx
04_soft_render/canvas/: CMakeLists.txt  canvas.cxx  canvas.hxx
04_soft_render/render/: CMakeLists.txt  canvas.cxx  canvas.hxx  vertex.cxx  vertex.hxx
05_engine_refactor/: CMakeLists.txt
05_engine_refactor/engine/: CMakeLists.txt
05_engine_refactor/engine/include/: engine.hxx  texture2d.hxx
05_engine_refactor/engine/src/: engine.cxx  shader.cxx  texture2d.cxx
05_engine_refactor/src/: CMakeLists.txt  game.cxx
build-01_hello-Desktop-Debug/: 01-hello.cbp  CMakeCache.txt  Makefile  cmake_install.cmake  hello.cbp
build-01_hello-Desktop-Debug/libs/: Makefile  cmake_install.cmake  hello-lib.cbp
build-01_hello-Desktop-Debug/source/: Makefile  cmake_install.cmake  hello-bin-dynamic  hello-bin.cbp
engine/: CMakeLists.txt
engine/include/: engine.hxx
engine/src/: engine.cxx  shader.cxx
shaders/: default_shader.fs  default_shader.vs
